2022-04-18 Se agregan plantillas de correo electronico a OT.

--- a/CódigoFuente/BitacorasProduccion/Views/OrdenesTrabajo/Asignar.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/OrdenesTrabajo/Asignar.cshtml
@@ -17,6 +17,8 @@
     <!-- Select2 -->
     <link href="@Url.Content("~/Content/vendors/select2/css/select2.css")" rel="stylesheet">
     <link href="@Url.Content("~/Content/vendors/select2-bootstrap4-theme/select2-bootstrap4.min.css")" rel="stylesheet">
+    <!-- iCheck -->
+    <link href="@Url.Content("~/Content/vendors/iCheck/skins/flat/green.css")" rel="stylesheet">
 
     <style>
         .text_derecha {
@@ -171,6 +173,39 @@
                             </div>
                         </div>
 
+                        <div class="ln_solid"></div>
+                        <div class="form-group row">
+                            @if (Model.tpm)
+                            {
+                                <!--TPM-->
+                                @Html.LabelFor(model => model.tpm, new { @class = "control-label col-md-1 text_derecha" })
+                                <div class="col-md-1 checkbox">
+                                    @Html.EditorFor(m => m.tpm, new { htmlAttributes = new { @class = "flat", @autocomplete = "off", @disabled = "disabled" } })
+                                </div>
+                            }
+                            else
+                            {
+                                @Html.LabelFor(model => model.tpm, new { @class = "control-label col-md-1 text_derecha" })
+                                <div class="col-md-1">
+                                    NO APLICA
+                                </div>
+                            }
+                            @if (Model.tpm && Model.OT_grupo_trabajo != null)
+                            {
+                                <div id="tpm_values">
+                                    @Html.LabelFor(model => model.numero_tarjeta, new { @class = "control-label col-md-2 text_derecha" })
+                                    <div class="col-md-4">
+                                        <input type="text" class="form-control " value="@Model.numero_tarjeta" readonly>
+                                    </div>
+                                    <!--Grupo de trabajo-->
+                                    @Html.LabelFor(model => model.id_grupo_trabajo, new { @class = "control-label col-md-2 text_derecha" })
+                                    <div class="col-md-4">
+                                        <input type="text" class="form-control " value="@Model.OT_grupo_trabajo.descripcion" readonly>
+                                    </div>
+                                </div>
+                            }
+                        </div>
+
                         <div class="item form-group">
                             @Html.LabelFor(model => model.descripcion, new { @class = "control-label col-md-12 col-sm-12", @style = "text-align:left" })
                         </div>
@@ -286,6 +321,8 @@
 
     @Scripts.Render("~/bundles/jqueryval")
     @Scripts.Render(Url.Content("~/Content/vendors/select2/js/select2.full.min.js"))
+    <!-- iCheck -->
+    @Scripts.Render(Url.Content("~/Content/vendors/iCheck/icheck.min.js"))
 
     <script>
         $(document).ready(function () {
