2022-04-22 Se agrega gráficas referentes a TPM en OT

--- a/CódigoFuente/BitacorasProduccion/Views/OrdenesTrabajo/Asignar.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/OrdenesTrabajo/Asignar.cshtml
@@ -231,7 +231,7 @@
 
 
                         <div class="form-group row">
-                            <span style="color:black"><b>DOCUMENTOS SOPORTE</b></span>
+                            <span style="color:black"><b>DOCUMENTOS SOLICITUD</b></span>
                         </div>
                         @if (Model != null && Model.id_documento_solicitud.HasValue)
                         {
