--- a/CódigoFuente/BitacorasProduccion/Views/OrdenesTrabajo/CerrarOrden.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/OrdenesTrabajo/CerrarOrden.cshtml
@@ -242,7 +242,7 @@
                         @if (Model != null && Model.id_documento_solicitud.HasValue)
                         {
                             <div class="form-group row">
-                                <span style="color:black"><b>DOCUMENTOS SOPORTE</b></span>
+                                <span style="color:black"><b>DOCUMENTOS SOLICITUD</b></span>
                             </div>
                             <div class="form-group row" id="div_document_support_info">
                                 @Html.LabelFor(model => model.id_documento_solicitud, new { @class = "control-label col-md-2" })
