--- a/CódigoFuente/BitacorasProduccion/Views/OrdenesTrabajo/Create.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/OrdenesTrabajo/Create.cshtml
@@ -174,7 +174,7 @@
 
                             <div class="ln_solid"></div>
                             <div class="form-group row">
-                                <span style="color:black"><b>DOCUMENTOS SOPORTE</b></span>
+                                <span style="color:black"><b>DOCUMENTOS SOLICITUD</b></span>
                             </div>
 
                             <div class="form-group row">
