--- a/CódigoFuente/BitacorasProduccion/Views/OrdenesTrabajo/Details.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/OrdenesTrabajo/Details.cshtml
@@ -227,7 +227,7 @@
                         <div class="ln_solid"></div>
 
                         <div class="form-group row">
-                            <span style="color:black"><b>DOCUMENTOS SOPORTE</b></span>
+                            <span style="color:black"><b>DOCUMENTOS SOLICITUD</b></span>
                         </div>
                         @if (Model != null && Model.id_documento_solicitud.HasValue)
                         {
@@ -396,53 +396,56 @@
                                 </div>
                             </div>
                         }
-                        <div class="ln_solid"></div>
-                        <div class="form-group row">
-                            <span style="color:black"><b>COMENTARIO</b></span>
-                        </div>
 
-
-                        <div class="item form-group">
-                            <div class="col-md-12">
-                                @Html.TextAreaFor(model => model.comentario, new { @class = "form-control", @rows = "4", @autocomplete = "off", @readonly = "readonly" })
-                                @Html.ValidationMessageFor(model => model.comentario, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
-
-                        <div class="ln_solid"></div>
-
-
-                        <div class="form-group row">
-                            <span style="color:black"><b>DOCUMENTOS SOPORTE</b></span>
-                        </div>
-                        @if (Model != null && Model.id_documento_cierre.HasValue)
+                        @if (Model.estatus == Bitacoras.Util.OT_Status.CERRADO)
                         {
+                            <div class="ln_solid"></div>
+                            <div class="form-group row">
+                                <span style="color:black"><b>COMENTARIO</b></span>
+                            </div>
 
-                            <div class="form-group row" id="div_document_support_info">
-                                @Html.LabelFor(model => model.id_documento_cierre, new { @class = "control-label col-md-2" })
-                                <div class="col-md-7">
-                                    <input type="text" class="form-control col-md-12" style="text-align: right;" value="@Model.biblioteca_digital.Nombre" readonly>
-                                </div>
-                                <div class="col-md-3">
-                                    <a href="@Url.Action("DownloadFile", "Combos", new { idDocumento = Model.id_documento_cierre })" class="btn btn-success btm-sm" title="Download">
-                                        <i class="fa fa-download"></i>
-                                    </a>
-                                    <a href="@Url.Action("DownloadFile", "Combos", new { idDocumento = Model.id_documento_cierre, inline = true })" class="btn btn-info btm-sm" target="_blank" title="Inline">
-                                        <i class="fa fa-eye"></i>
-                                    </a>
+
+                            <div class="item form-group">
+                                <div class="col-md-12">
+                                    @Html.TextAreaFor(model => model.comentario, new { @class = "form-control", @rows = "4", @autocomplete = "off", @readonly = "readonly" })
+                                    @Html.ValidationMessageFor(model => model.comentario, "", new { @class = "text-danger" })
                                 </div>
                             </div>
-                        }
-                        else
-                        {
-                            <div class="form-group row" id="div_document_support_info">
-                                @Html.LabelFor(model => model.id_documento_cierre, new { @class = "control-label col-md-2" })
-                                <div class="col-md-7">
-                                    <input type="text" class="form-control col-md-12" style="text-align: right;" value="NO DISPONIBLE" readonly>
-                                </div>
-                            </div>
-                        }
 
+                            <div class="ln_solid"></div>
+
+
+                            <div class="form-group row">
+                                <span style="color:black"><b>DOCUMENTOS SOPORTE</b></span>
+                            </div>
+                            if (Model != null && Model.id_documento_cierre.HasValue)
+                            {
+
+                                <div class="form-group row" id="div_document_support_info">
+                                    @Html.LabelFor(model => model.id_documento_cierre, new { @class = "control-label col-md-2" })
+                                    <div class="col-md-7">
+                                        <input type="text" class="form-control col-md-12" style="text-align: right;" value="@Model.biblioteca_digital.Nombre" readonly>
+                                    </div>
+                                    <div class="col-md-3">
+                                        <a href="@Url.Action("DownloadFile", "Combos", new { idDocumento = Model.id_documento_cierre })" class="btn btn-success btm-sm" title="Download">
+                                            <i class="fa fa-download"></i>
+                                        </a>
+                                        <a href="@Url.Action("DownloadFile", "Combos", new { idDocumento = Model.id_documento_cierre, inline = true })" class="btn btn-info btm-sm" target="_blank" title="Inline">
+                                            <i class="fa fa-eye"></i>
+                                        </a>
+                                    </div>
+                                </div>
+                            }
+                            else
+                            {
+                                <div class="form-group row" id="div_document_support_info">
+                                    @Html.LabelFor(model => model.id_documento_cierre, new { @class = "control-label col-md-2" })
+                                    <div class="col-md-7">
+                                        <input type="text" class="form-control col-md-12" style="text-align: right;" value="NO DISPONIBLE" readonly>
+                                    </div>
+                                </div>
+                            }
+                        }
 
 
                     </div>
